laravel-code-base: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,27 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
+.env.*
+*.ini
+composer.lock
+/public/upload
+.phpintel
+worker.log
+/public/js/app.js
+/public/css/app.css
+/public/frontend/js/app.js
+/public/frontend/css/app.css
+/public/mix-manifest.json
+/public/fonts/*
+package-lock.json
+/storage/api-docs/api-docs.json
+/resources/assets/js/backend.js
+/tests
+.htaccess
+/public/fonts/vendor
